--- a/app/src/main/res/navigation/main_navigation.xml
+++ b/app/src/main/res/navigation/main_navigation.xml
@@ -18,6 +18,57 @@
     <fragment
         android:id="@+id/navigation_collections"
         android:name="k.movie_catalog.features.collections.CollectionsFragment"
-        tools:layout="@layout/fragment_collections" />
+        tools:layout="@layout/fragment_collections">
+        <action
+            android:id="@+id/action_collections_to_details"
+            app:destination="@id/navigation_collections_details" />
+        <action
+            android:id="@+id/action_collections_to_create"
+            app:destination="@id/navigation_collections_create" />
+    </fragment>
+
+    <fragment
+        android:id="@+id/navigation_collections_create"
+        android:name="k.movie_catalog.features.collections.create.CreateCollectionsFragment"
+        tools:layout="@layout/fragment_collections_create">
+        <action
+            android:id="@+id/action_back_create"
+            app:destination="@id/navigation_collections"
+            app:popUpTo="@id/navigation_collections"
+            app:popUpToInclusive="false" />
+    </fragment>
+
+    <fragment
+        android:id="@+id/navigation_collections_edit"
+        android:name="k.movie_catalog.features.collections.edit.EditCollectionsFragment"
+        tools:layout="@layout/fragment_collections_edit">
+        <argument
+            android:name="collection"
+            app:argType="k.movie_catalog.repositories.models.Collection" />
+        <action
+            android:id="@+id/action_back_edit"
+            app:destination="@id/navigation_collections_details"
+            app:popUpTo="@id/navigation_collections_details"
+            app:popUpToInclusive="false"/>
+    </fragment>
+
+    <fragment
+        android:id="@+id/navigation_collections_details"
+        android:name="k.movie_catalog.features.collections.details.DetailsCollectionsFragment"
+        tools:layout="@layout/fragment_collections_details">
+        <argument
+            android:name="collection"
+            app:argType="k.movie_catalog.repositories.models.Collection" />
+        <action
+            android:id="@+id/action_back_details"
+            app:destination="@id/navigation_collections"
+            app:popUpTo="@id/navigation_collections"
+            app:popUpToInclusive="false"/>
+        <action
+            android:id="@+id/action_collections_details_to_edit"
+            app:destination="@id/navigation_collections_edit"
+            app:popUpTo="@id/navigation_collections"
+            app:popUpToInclusive="false"/>
+    </fragment>
 
 </navigation>
