--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="?attr/android:colorBackground"
+    android:fitsSystemWindows="true"
     android:paddingBottom="68dp"
     tools:context=".features.profile.ProfileFragment">
 
