--- a/app/src/main/res/layout/item_collection.xml
+++ b/app/src/main/res/layout/item_collection.xml
@@ -43,14 +43,12 @@
         app:layout_constraintStart_toEndOf="@+id/icon_container"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <ImageButton
+    <ImageView
         android:id="@+id/details_btn"
         android:layout_width="12dp"
         android:layout_height="20dp"
         android:layout_marginEnd="16dp"
-        android:background="?attr/selectableItemBackgroundBorderless"
         android:contentDescription="@string/description_navigate_to_collection_detail"
-        android:padding="4dp"
         android:src="@drawable/icon_right_arrow"
         app:tint="?attr/colorOnBackground"
         app:layout_constraintBottom_toBottomOf="parent"
