--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    android:paddingBottom="68dp">
+    android:layout_marginBottom="48dp">
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
