--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -7,10 +7,11 @@
 
     <ImageView
         android:id="@+id/logo_image"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:transitionName="logo_transition"
         android:layout_marginTop="56dp"
-        android:paddingHorizontal="55dp"
+        android:layout_marginHorizontal="55dp"
         android:src="@drawable/icon_login"
         android:contentDescription="@string/description_movie_catalog_logo"
         app:layout_constraintEnd_toEndOf="parent"
