--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -9,6 +9,7 @@
         android:id="@+id/logo"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:transitionName="logo_transition"
         android:layout_marginTop="56dp"
         android:layout_marginHorizontal="106dp"
         android:src="@drawable/icon_login"
