--- a/app/src/main/res/drawable/gradient_shadow.xml
+++ b/app/src/main/res/drawable/gradient_shadow.xml
@@ -1,10 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle">
+<shape xmlns:android="http://schemas.android.com/apk/res/android"
+    android:shape="rectangle">
     <gradient
-        android:startColor="?attr/colorPrimary"
-        android:endColor="?attr/colorOnBackground"
-        android:angle="90"/>
-
-<!--    android:startColor="@android:color/transparent"-->
-<!--    android:endColor="?attr/android:colorBackground"-->
+        android:angle="90"
+        android:startColor="?attr/android:colorBackground"
+        android:endColor="@android:color/transparent" />
 </shape>
