--- a/app/src/main/res/layout/item_collection.xml
+++ b/app/src/main/res/layout/item_collection.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_marginBottom="16dp"
     android:id="@+id/item_collections_card"
-    android:layout_height="48dp">
+    android:layout_width="match_parent"
+    android:layout_height="48dp"
+    android:layout_marginBottom="16dp">
 
 
     <androidx.cardview.widget.CardView
@@ -34,9 +34,9 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="16dp"
-        android:textStyle="bold"
         android:textColor="?attr/colorOnBackground"
         android:textSize="14sp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/details_btn"
         app:layout_constraintStart_toEndOf="@+id/icon_container"
@@ -49,10 +49,10 @@
         android:layout_marginEnd="16dp"
         android:contentDescription="@string/description_navigate_to_collection_detail"
         android:src="@drawable/icon_right_arrow"
-        app:tint="?attr/colorOnBackground"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:tint="?attr/colorOnBackground" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
