--- a/app/src/main/res/layout/item_movie.xml
+++ b/app/src/main/res/layout/item_movie.xml
@@ -13,18 +13,17 @@
         android:contentDescription="@string/description_poster"
         android:scaleType="centerCrop"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/title"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="16dp"
+        android:maxLines="1"
         android:textColor="?attr/colorOnBackground"
         android:textSize="20sp"
-        android:maxLines="1"
         android:textStyle="bold"
         app:layout_constraintStart_toEndOf="@+id/movie_poster"
         app:layout_constraintTop_toTopOf="parent" />
@@ -35,12 +34,11 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginTop="4dp"
+        android:maxLines="1"
         android:textColor="?attr/colorOnBackground"
         android:textSize="14sp"
-        android:maxLines="1"
-        app:layout_constraintTop_toBottomOf="@+id/title"
         app:layout_constraintStart_toEndOf="@+id/movie_poster"
-        />
+        app:layout_constraintTop_toBottomOf="@+id/title" />
 
     <TextView
         android:id="@+id/separator"
@@ -48,13 +46,12 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="4dp"
         android:layout_marginTop="4dp"
+        android:maxLines="1"
         android:text="@string/text_separator"
         android:textColor="?attr/colorOnBackground"
         android:textSize="14sp"
-        android:maxLines="1"
-        app:layout_constraintTop_toBottomOf="@+id/title"
         app:layout_constraintStart_toEndOf="@+id/year"
-        />
+        app:layout_constraintTop_toBottomOf="@+id/title" />
 
     <TextView
         android:id="@+id/country"
@@ -62,24 +59,22 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="4dp"
         android:layout_marginTop="4dp"
+        android:maxLines="1"
         android:textColor="?attr/colorOnBackground"
         android:textSize="14sp"
-        android:maxLines="1"
-        app:layout_constraintTop_toBottomOf="@+id/title"
         app:layout_constraintStart_toEndOf="@+id/separator"
-        />
+        app:layout_constraintTop_toBottomOf="@+id/title" />
 
     <TextView
         android:id="@+id/genres"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="16dp"
+        android:maxLines="1"
         android:textColor="?attr/colorOnBackground"
         android:textSize="14sp"
-        android:maxLines="1"
-        app:layout_constraintTop_toBottomOf="@+id/year"
         app:layout_constraintStart_toEndOf="@+id/movie_poster"
-        />
+        app:layout_constraintTop_toBottomOf="@+id/year" />
 
     <com.google.android.material.chip.Chip
         android:id="@+id/rating"
@@ -87,12 +82,12 @@
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="16dp"
         android:textColor="?attr/colorOnPrimary"
-        app:textStartPadding="16dp"
-        app:textEndPadding="16dp"
-        app:chipStrokeWidth="0dp"
-        app:chipStrokeColor="@android:color/transparent"
         app:chipCornerRadius="@dimen/large"
+        app:chipStrokeColor="@android:color/transparent"
+        app:chipStrokeWidth="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/movie_poster" />
+        app:layout_constraintStart_toEndOf="@+id/movie_poster"
+        app:textEndPadding="16dp"
+        app:textStartPadding="16dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
