--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,33 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:fitsSystemWindows="false"
     tools:context=".MainActivity">
 
     <fragment
         android:id="@+id/nav_host_fragment_activity_main"
-        android:background="?attr/android:colorBackground"
         android:name="androidx.navigation.fragment.NavHostFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="?attr/android:colorBackground"
         app:defaultNavHost="true" />
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottom_navigation"
+        style="@style/Widget.MaterialComponents.BottomNavigationView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        style="@style/Widget.MaterialComponents.BottomNavigationView"
-        app:itemRippleColor="@android:color/transparent"
         android:layout_gravity="bottom"
+        android:backgroundTint="?attr/colorSurface"
         android:visibility="gone"
         app:itemGravity="center"
-        android:backgroundTint="?attr/colorSurface"
         app:itemIconTint="@color/bottom_nav_icon_color"
+        app:itemRippleColor="@android:color/transparent"
         app:itemTextColor="@color/bottom_nav_text_color"
-        app:menu="@menu/bottom_nav_menu"
-        app:layout_insetEdge="bottom"/>
+        app:layout_insetEdge="bottom"
+        app:menu="@menu/bottom_nav_menu" />
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
