--- a/app/src/main/res/layout/fragment_icon_bottom_sheet.xml
+++ b/app/src/main/res/layout/fragment_icon_bottom_sheet.xml
@@ -1,30 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:tools="http://schemas.android.com/tools"
     android:background="@drawable/bottom_sheet_background"
     android:orientation="vertical">
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/choose_icon"
-        android:textSize="20sp"
-        android:textStyle="bold"
-        android:maxLines="1"
-        android:gravity="center"
-        android:textColor="?attr/colorOnBackground"
-        android:layout_marginVertical="16dp"
         android:layout_marginHorizontal="16dp"
-        />
+        android:layout_marginVertical="16dp"
+        android:gravity="center"
+        android:maxLines="1"
+        android:text="@string/choose_icon"
+        android:textColor="?attr/colorOnBackground"
+        android:textSize="20sp"
+        android:textStyle="bold" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/icons_recycler_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:clipToPadding="false"
         android:paddingHorizontal="16dp"
-        tools:listitem="@layout/item_icon"
-        android:clipToPadding="false" />
+        tools:listitem="@layout/item_icon" />
 
 </LinearLayout>
