--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -1,22 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="?attr/android:colorBackground"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:background="?attr/android:colorBackground">
 
     <ImageView
         android:id="@+id/logo_image"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:transitionName="logo_transition"
-        android:layout_marginTop="56dp"
         android:layout_marginHorizontal="55dp"
-        android:src="@drawable/icon_login"
+        android:layout_marginTop="56dp"
         android:contentDescription="@string/description_movie_catalog_logo"
+        android:src="@drawable/icon_login"
+        android:transitionName="logo_transition"
+        app:layout_constraintBottom_toTopOf="@id/username_til"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/username_til"
         app:layout_constraintTop_toTopOf="parent" />
 
     <com.google.android.material.textfield.TextInputLayout
@@ -25,10 +25,10 @@
         android:layout_height="wrap_content"
         android:paddingHorizontal="16dp"
         android:paddingTop="48dp"
-        app:boxCornerRadiusTopStart="@dimen/medium"
-        app:boxCornerRadiusTopEnd="@dimen/medium"
-        app:boxCornerRadiusBottomStart="@dimen/medium"
         app:boxCornerRadiusBottomEnd="@dimen/medium"
+        app:boxCornerRadiusBottomStart="@dimen/medium"
+        app:boxCornerRadiusTopEnd="@dimen/medium"
+        app:boxCornerRadiusTopStart="@dimen/medium"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/logo_image">
@@ -38,11 +38,10 @@
             style="@style/DefaultEditText"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textColor="?attr/colorOnSurface"
-            app:boxStrokeColor="?attr/colorOnSurface"
             android:hint="@string/hint_login"
             android:inputType="textEmailAddress"
-            />
+            android:textColor="?attr/colorOnSurface"
+            app:boxStrokeColor="?attr/colorOnSurface" />
 
     </com.google.android.material.textfield.TextInputLayout>
 
@@ -52,10 +51,10 @@
         android:layout_height="wrap_content"
         android:paddingHorizontal="16dp"
         android:paddingTop="14dp"
-        app:boxCornerRadiusTopStart="@dimen/medium"
-        app:boxCornerRadiusTopEnd="@dimen/medium"
-        app:boxCornerRadiusBottomStart="@dimen/medium"
         app:boxCornerRadiusBottomEnd="@dimen/medium"
+        app:boxCornerRadiusBottomStart="@dimen/medium"
+        app:boxCornerRadiusTopEnd="@dimen/medium"
+        app:boxCornerRadiusTopStart="@dimen/medium"
         app:endIconMode="password_toggle"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -66,11 +65,10 @@
             style="@style/DefaultEditText"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textColor="?attr/colorOnSurface"
-            app:boxStrokeColor="?attr/colorOnSurface"
             android:hint="@string/hint_password"
             android:inputType="textPassword"
-            />
+            android:textColor="?attr/colorOnSurface"
+            app:boxStrokeColor="?attr/colorOnSurface" />
 
     </com.google.android.material.textfield.TextInputLayout>
 
@@ -98,10 +96,10 @@
         android:layout_height="wrap_content"
         android:layout_margin="16dp"
         android:visibility="gone"
-        app:layout_constraintTop_toBottomOf="@id/space"
         app:layout_constraintBottom_toTopOf="@+id/login_btn"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/space" />
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/login_btn"
@@ -110,15 +108,15 @@
         android:layout_marginHorizontal="16dp"
         android:layout_marginBottom="8dp"
         android:text="@string/login"
-        android:textSize="16sp"
         android:textColor="@color/active_button_text"
+        android:textSize="16sp"
         app:backgroundTint="@color/active_button"
-        app:strokeColor="@color/active_button_border"
-        app:strokeWidth="1dp"
         app:cornerRadius="@dimen/medium"
         app:layout_constraintBottom_toTopOf="@+id/register_btn"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:strokeColor="@color/active_button_border"
+        app:strokeWidth="1dp" />
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/register_btn"
@@ -127,8 +125,8 @@
         android:layout_marginHorizontal="16dp"
         android:layout_marginBottom="24dp"
         android:text="@string/register"
-        android:textSize="16sp"
         android:textColor="?attr/colorPrimary"
+        android:textSize="16sp"
         app:backgroundTint="@android:color/transparent"
         app:cornerRadius="@dimen/medium"
         app:layout_constraintBottom_toBottomOf="parent"
