--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -84,8 +84,8 @@
             android:layout_height="wrap_content"
             android:text="@string/gallery"
             android:textColor="?attr/colorPrimary"
-            android:textStyle="bold"
-            android:textSize="24sp" />
+            android:textSize="24sp"
+            android:textStyle="bold" />
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/movie_recycler"
