--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -1,22 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="?attr/android:colorBackground"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:background="?attr/android:colorBackground">
 
     <ImageView
         android:id="@+id/logo"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:transitionName="logo_transition"
-        android:layout_marginTop="56dp"
         android:layout_marginHorizontal="106dp"
-        android:src="@drawable/icon_login"
+        android:layout_marginTop="56dp"
         android:contentDescription="@string/description_movie_catalog_logo"
+        android:src="@drawable/icon_login"
+        android:transitionName="logo_transition"
+        app:layout_constraintBottom_toTopOf="@id/title"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/title"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
@@ -25,51 +25,50 @@
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="16dp"
         android:text="@string/register"
-        android:textSize="32sp"
         android:textColor="?attr/colorPrimary"
+        android:textSize="32sp"
         android:textStyle="bold"
-        app:layout_constraintTop_toBottomOf="@id/logo"
         app:layout_constraintBottom_toTopOf="@+id/input_section"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/logo" />
 
     <ScrollView
         android:id="@+id/input_section"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:fillViewport="true"
         android:layout_marginHorizontal="16dp"
+        android:fillViewport="true"
         android:paddingTop="16dp"
-        app:layout_constraintTop_toBottomOf="@+id/title"
         app:layout_constraintBottom_toTopOf="@+id/error"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent">
+        app:layout_constraintTop_toBottomOf="@+id/title">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
             android:divider="@drawable/divider_register"
+            android:orientation="vertical"
             android:showDividers="middle">
 
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/username_til"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                app:boxCornerRadiusTopStart="@dimen/medium"
-                app:boxCornerRadiusTopEnd="@dimen/medium"
+                app:boxCornerRadiusBottomEnd="@dimen/medium"
                 app:boxCornerRadiusBottomStart="@dimen/medium"
-                app:boxCornerRadiusBottomEnd="@dimen/medium">
+                app:boxCornerRadiusTopEnd="@dimen/medium"
+                app:boxCornerRadiusTopStart="@dimen/medium">
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/username_et"
                     style="@style/DefaultEditText"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:textColor="?attr/colorOnSurface"
-                    app:boxStrokeColor="?attr/colorOnSurface"
                     android:hint="@string/hint_login"
-                    />
+                    android:textColor="?attr/colorOnSurface"
+                    app:boxStrokeColor="?attr/colorOnSurface" />
 
             </com.google.android.material.textfield.TextInputLayout>
 
@@ -77,21 +76,20 @@
                 android:id="@+id/email_til"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                app:boxCornerRadiusTopStart="@dimen/medium"
-                app:boxCornerRadiusTopEnd="@dimen/medium"
+                app:boxCornerRadiusBottomEnd="@dimen/medium"
                 app:boxCornerRadiusBottomStart="@dimen/medium"
-                app:boxCornerRadiusBottomEnd="@dimen/medium">
+                app:boxCornerRadiusTopEnd="@dimen/medium"
+                app:boxCornerRadiusTopStart="@dimen/medium">
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/email_et"
                     style="@style/DefaultEditText"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:textColor="?attr/colorOnSurface"
-                    app:boxStrokeColor="?attr/colorOnSurface"
                     android:hint="@string/hint_email"
                     android:inputType="textEmailAddress"
-                    />
+                    android:textColor="?attr/colorOnSurface"
+                    app:boxStrokeColor="?attr/colorOnSurface" />
 
             </com.google.android.material.textfield.TextInputLayout>
 
@@ -99,20 +97,19 @@
                 android:id="@+id/name_til"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                app:boxCornerRadiusTopStart="@dimen/medium"
-                app:boxCornerRadiusTopEnd="@dimen/medium"
+                app:boxCornerRadiusBottomEnd="@dimen/medium"
                 app:boxCornerRadiusBottomStart="@dimen/medium"
-                app:boxCornerRadiusBottomEnd="@dimen/medium">
+                app:boxCornerRadiusTopEnd="@dimen/medium"
+                app:boxCornerRadiusTopStart="@dimen/medium">
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/name_et"
                     style="@style/DefaultEditText"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:textColor="?attr/colorOnSurface"
-                    app:boxStrokeColor="?attr/colorOnSurface"
                     android:hint="@string/hint_name"
-                    />
+                    android:textColor="?attr/colorOnSurface"
+                    app:boxStrokeColor="?attr/colorOnSurface" />
 
             </com.google.android.material.textfield.TextInputLayout>
 
@@ -120,10 +117,10 @@
                 android:id="@+id/password_til"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                app:boxCornerRadiusTopStart="@dimen/medium"
-                app:boxCornerRadiusTopEnd="@dimen/medium"
-                app:boxCornerRadiusBottomStart="@dimen/medium"
                 app:boxCornerRadiusBottomEnd="@dimen/medium"
+                app:boxCornerRadiusBottomStart="@dimen/medium"
+                app:boxCornerRadiusTopEnd="@dimen/medium"
+                app:boxCornerRadiusTopStart="@dimen/medium"
                 app:endIconMode="password_toggle">
 
                 <com.google.android.material.textfield.TextInputEditText
@@ -131,11 +128,10 @@
                     style="@style/DefaultEditText"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:textColor="?attr/colorOnSurface"
-                    app:boxStrokeColor="?attr/colorOnSurface"
                     android:hint="@string/hint_password"
                     android:inputType="textPassword"
-                    />
+                    android:textColor="?attr/colorOnSurface"
+                    app:boxStrokeColor="?attr/colorOnSurface" />
 
             </com.google.android.material.textfield.TextInputLayout>
 
@@ -143,10 +139,10 @@
                 android:id="@+id/repeat_password_til"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                app:boxCornerRadiusTopStart="@dimen/medium"
-                app:boxCornerRadiusTopEnd="@dimen/medium"
-                app:boxCornerRadiusBottomStart="@dimen/medium"
                 app:boxCornerRadiusBottomEnd="@dimen/medium"
+                app:boxCornerRadiusBottomStart="@dimen/medium"
+                app:boxCornerRadiusTopEnd="@dimen/medium"
+                app:boxCornerRadiusTopStart="@dimen/medium"
                 app:endIconMode="password_toggle">
 
                 <com.google.android.material.textfield.TextInputEditText
@@ -154,11 +150,10 @@
                     style="@style/DefaultEditText"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:textColor="?attr/colorOnSurface"
-                    app:boxStrokeColor="?attr/colorOnSurface"
                     android:hint="@string/hint_password_repeat"
                     android:inputType="textPassword"
-                    />
+                    android:textColor="?attr/colorOnSurface"
+                    app:boxStrokeColor="?attr/colorOnSurface" />
 
             </com.google.android.material.textfield.TextInputLayout>
 
@@ -166,24 +161,23 @@
                 android:id="@+id/birth_date_til"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                app:boxCornerRadiusTopStart="@dimen/medium"
-                app:boxCornerRadiusTopEnd="@dimen/medium"
-                app:boxCornerRadiusBottomStart="@dimen/medium"
                 app:boxCornerRadiusBottomEnd="@dimen/medium"
-                app:endIconMode="custom"
-                app:endIconDrawable="@drawable/icon_calendar">
+                app:boxCornerRadiusBottomStart="@dimen/medium"
+                app:boxCornerRadiusTopEnd="@dimen/medium"
+                app:boxCornerRadiusTopStart="@dimen/medium"
+                app:endIconDrawable="@drawable/icon_calendar"
+                app:endIconMode="custom">
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/birth_date_et"
                     style="@style/DefaultEditText"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:textColor="?attr/colorOnSurface"
-                    app:boxStrokeColor="?attr/colorOnSurface"
-                    android:hint="@string/hint_date_of_birth"
-                    android:focusable="false"
                     android:cursorVisible="false"
-                    />
+                    android:focusable="false"
+                    android:hint="@string/hint_date_of_birth"
+                    android:textColor="?attr/colorOnSurface"
+                    app:boxStrokeColor="?attr/colorOnSurface" />
 
             </com.google.android.material.textfield.TextInputLayout>
 
@@ -191,32 +185,32 @@
                 android:id="@+id/gender_toggle"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                app:singleSelection="true"
-                app:selectionRequired="true">
+                app:selectionRequired="true"
+                app:singleSelection="true">
 
                 <com.google.android.material.button.MaterialButton
                     android:id="@+id/male_btn"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
+                    android:backgroundTint="@color/toggle_gender"
                     android:text="@string/male"
                     android:textColor="@color/toggle_gender_text"
                     app:cornerRadius="@dimen/medium"
                     app:strokeColor="?attr/colorOnSurface"
-                    app:strokeWidth="1dp"
-                    android:backgroundTint="@color/toggle_gender" />
+                    app:strokeWidth="1dp" />
 
                 <com.google.android.material.button.MaterialButton
                     android:id="@+id/female_btn"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    app:strokeColor="?attr/colorOnSurface"
-                    app:strokeWidth="1dp"
+                    android:backgroundTint="@color/toggle_gender"
                     android:text="@string/female"
                     android:textColor="@color/toggle_gender_text"
                     app:cornerRadius="@dimen/medium"
-                    android:backgroundTint="@color/toggle_gender" />
+                    app:strokeColor="?attr/colorOnSurface"
+                    app:strokeWidth="1dp" />
 
             </com.google.android.material.button.MaterialButtonToggleGroup>
         </LinearLayout>
@@ -237,10 +231,10 @@
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="16dp"
         android:visibility="gone"
-        app:layout_constraintTop_toBottomOf="@id/input_section"
         app:layout_constraintBottom_toTopOf="@+id/register_btn"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/input_section" />
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/register_btn"
@@ -249,16 +243,16 @@
         android:layout_marginHorizontal="16dp"
         android:layout_marginBottom="8dp"
         android:text="@string/register"
-        android:textSize="16sp"
         android:textColor="@color/active_button_text"
+        android:textSize="16sp"
         app:backgroundTint="@color/active_button"
-        app:strokeColor="@color/active_button_border"
-        app:strokeWidth="1dp"
         app:cornerRadius="@dimen/medium"
         app:layout_constraintBottom_toTopOf="@+id/login_btn"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/error" />
+        app:layout_constraintTop_toBottomOf="@+id/error"
+        app:strokeColor="@color/active_button_border"
+        app:strokeWidth="1dp" />
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/login_btn"
@@ -267,13 +261,13 @@
         android:layout_marginHorizontal="16dp"
         android:layout_marginBottom="24dp"
         android:text="@string/already_have_account"
-        android:textSize="16sp"
         android:textColor="?attr/colorPrimary"
+        android:textSize="16sp"
         app:backgroundTint="@android:color/transparent"
         app:cornerRadius="@dimen/medium"
-        app:layout_constraintTop_toBottomOf="@id/register_btn"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/register_btn" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
