--- a/app/src/main/res/layout/item_icon.xml
+++ b/app/src/main/res/layout/item_icon.xml
@@ -4,9 +4,9 @@
     android:id="@id/icon_container"
     android:layout_width="74dp"
     android:layout_height="74dp"
+    android:clickable="true"
     app:cardCornerRadius="74dp"
-    app:strokeWidth="0dp"
-    android:clickable="true">
+    app:strokeWidth="0dp">
 
     <ImageView
         android:id="@+id/icon"
