style: format code + feature: navigation between collection movie and movie detail

--- a/app/src/main/res/drawable/icon_right_arrow.xml
+++ b/app/src/main/res/drawable/icon_right_arrow.xml
@@ -3,8 +3,8 @@
     android:height="21dp"
     android:viewportWidth="12"
     android:viewportHeight="21">
-  <path
-      android:pathData="M2.462,0.417L11.707,9.554C12.097,9.939 12.097,10.56 11.707,10.946L2.462,20.083C1.9,20.639 0.985,20.639 0.422,20.083C-0.141,19.526 -0.141,18.623 0.422,18.067L8.33,10.25L0.422,2.434C-0.141,1.877 -0.141,0.974 0.422,0.417C0.985,-0.139 1.9,-0.139 2.462,0.417Z"
-      android:fillColor="#A8A8A8"
-      android:fillType="evenOdd"/>
+    <path
+        android:fillColor="#A8A8A8"
+        android:fillType="evenOdd"
+        android:pathData="M2.462,0.417L11.707,9.554C12.097,9.939 12.097,10.56 11.707,10.946L2.462,20.083C1.9,20.639 0.985,20.639 0.422,20.083C-0.141,19.526 -0.141,18.623 0.422,18.067L8.33,10.25L0.422,2.434C-0.141,1.877 -0.141,0.974 0.422,0.417C0.985,-0.139 1.9,-0.139 2.462,0.417Z" />
 </vector>
