--- a/app/src/main/res/drawable/gradient_shadow.xml
+++ b/app/src/main/res/drawable/gradient_shadow.xml
@@ -3,6 +3,6 @@
     android:shape="rectangle">
     <gradient
         android:angle="90"
-        android:startColor="?attr/android:colorBackground"
-        android:endColor="@android:color/transparent" />
+        android:endColor="@android:color/transparent"
+        android:startColor="?attr/android:colorBackground" />
 </shape>
