--- a/app/src/main/res/drawable/icon_back.xml
+++ b/app/src/main/res/drawable/icon_back.xml
@@ -3,7 +3,7 @@
     android:height="24dp"
     android:viewportWidth="24"
     android:viewportHeight="24">
-  <path
-      android:pathData="M20.016,11.016V12.984H7.828L13.406,18.609L12,20.016L3.984,12L12,3.984L13.406,5.391L7.828,11.016H20.016Z"
-      android:fillColor="#ffffff"/>
+    <path
+        android:fillColor="#ffffff"
+        android:pathData="M20.016,11.016V12.984H7.828L13.406,18.609L12,20.016L3.984,12L12,3.984L13.406,5.391L7.828,11.016H20.016Z" />
 </vector>
