--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,4 +1,5 @@
-<resources xmlns:tools="http://schemas.android.com/tools">
+<resources>
+
     <style name="Theme.Moviecatalog" parent="Base.Theme.Moviecatalog">
         <item name="colorPrimary">@color/primaryDark</item>
         <item name="colorOnPrimary">@color/onPrimaryDark</item>
@@ -11,7 +12,7 @@
         <item name="colorError">@color/errorDark</item>
         <item name="colorOnError">@color/onErrorDark</item>
 
-        <item name="android:statusBarColor" >@color/primaryDark</item>
-        <item name="android:windowLightStatusBar" >true</item>
+        <item name="android:statusBarColor">@color/primaryDark</item>
+        <item name="android:windowLightStatusBar">true</item>
     </style>
 </resources>
