--- a/app/src/main/res/values/splash.xml
+++ b/app/src/main/res/values/splash.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" ?>
-<resources xmlns:tools="http://schemas.android.com/tools">
+<resources>
+
     <style name="Theme.AnimatedSplash.MovieCatalogSplash" parent="Theme.SplashScreen">
         <item name="windowSplashScreenBackground">@color/backgroundDark</item>
         <item name="postSplashScreenTheme">@style/Theme.Moviecatalog</item>
