--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -22,7 +22,8 @@
     </style>
 
     <style name="ProfileCaption">
-        <item name="android:layout_margin">16dp</item>
+        <item name="android:layout_marginHorizontal">16dp</item>
+        <item name="android:layout_marginVertical">2dp</item>
         <item name="android:maxLines">1</item>
         <item name="android:textAlignment">textStart</item>
         <item name="android:textSize">16sp</item>
